FIX: new topics alert wasn't covering the entire topic list column headings

--- a/app/assets/stylesheets/desktop/topic-list.scss
+++ b/app/assets/stylesheets/desktop/topic-list.scss
@@ -248,6 +248,12 @@
   h2 {
     margin: 20px 0 10px;
   }
+  .show-more.has-topics {
+    top: 0;
+    .alert {
+      padding: 12px 35px 12px 14px;
+    }
+  }
 }
 
 .category-dropdown-menu {
